gen/LPPParser.py
# Generated from C:/Users/Kira/PycharmProjects/pythonProject/grammar/LPP.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LPPParser ( Parser ):

    grammarFileName = "LPP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "':'", "'['", "']'", "','", 
                     "'<-'", "'->'", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'^'", "'*'", "'/'", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'='", "'<>'", "'>'", "'>='", 
                     "'<'", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INICIO", "FIN", "ESCRIBA", 
                      "LEA", "LLAMAR", "SI", "ENTONCES", "SINO", "CASO", 
                      "MIENTRAS", "HAGA", "PARA", "HASTA", "REPITA", "PROCEDIMIENTO", 
                      "VAR", "FUNCION", "RETORNE", "TIPO", "ES", "ARCHIVO", 
                      "SECUENCIAL", "ENTERO", "REAL", "CARACTER", "BOOLEANO", 
                      "CADENA", "REGISTRO", "ARREGLO", "DE", "ABRIR", "COMO", 
                      "ESCRITURA", "LECTURA", "CERRAR", "ESCRIBIR", "LEER", 
                      "PROC_NUEVA_LINEA", "PROC_LIMPIAR_PANTALLA", "PROC_POSICIONAR_CURSOR", 
                      "PROC_IR_A_INICIO", "PROC_IR_A_FIN", "PROC_IR_A", 
                      "PROC_INICIALIZAR_ALEATORIO", "PROC_PAUSA", "PROC_COLOR_TEXTO", 
                      "PROC_COLOR_FONDO", "FUNC_FDA", "FUNC_POSICION_ACTUAL", 
                      "FUNC_ALEATORIO", "FUNC_OBTENER_CARACTER", "FUNC_ENTERO_A_CADENA", 
                      "FUNC_REAL_A_CADENA", "FUNC_TECLA_PRESIONADA", "FUNC_VALOR_ASCII", 
                      "FUNC_CARACTER_ASCII", "FUNC_LONGITUD", "PODER", "MULT", 
                      "DIV", "MOD", "DIV_ENTEROS", "SUMA", "RESTA", "IGUAL", 
                      "DESIGUAL", "MAYOR", "MAYOR_IGUAL", "MENOR", "MENOR_IGUAL", 
                      "OP_Y", "OP_O", "NO", "LITERAL_REAL", "LITERAL_ENTERO", 
                      "LITERAL_CADENA", "LITERAL_CARACTER", "VERDADERO", 
                      "FALSO", "ID", "NL", "WS", "COMENTARIO", "COMENTARIO_LINEA" ]

    RULE_programa = 0
    RULE_declaracionesTipos = 1
    RULE_declaracionRegistro = 2
    RULE_declaracionTipo = 3
    RULE_declaracionesSubprogramas = 4
    RULE_declaracionProcedimiento = 5
    RULE_declaracionFuncion = 6
    RULE_parametros = 7
    RULE_parametro = 8
    RULE_declaracionesVariables = 9
    RULE_declaracionVariables = 10
    RULE_tipo = 11
    RULE_listaIDs = 12
    RULE_listaEnteros = 13
    RULE_sentenciasSubprograma = 14
    RULE_sentenciasPrograma = 15
    RULE_sentencias = 16
    RULE_sentencia = 17
    RULE_escriba = 18
    RULE_lea = 19
    RULE_asignar = 20
    RULE_symbolAssing = 21
    RULE_llamar = 22
    RULE_procedimientoLibreriaEstandar = 23
    RULE_si = 24
    RULE_entonces = 25
    RULE_sino = 26
    RULE_caso = 27
    RULE_opcionCaso = 28
    RULE_listaExprOpcion = 29
    RULE_exprOpcion = 30
    RULE_rangoExpr = 31
    RULE_casoSino = 32
    RULE_mientras = 33
    RULE_haga = 34
    RULE_para = 35
    RULE_hasta = 36
    RULE_repita = 37
    RULE_retorne = 38
    RULE_abrir = 39
    RULE_acceso = 40
    RULE_cerrar = 41
    RULE_escribir = 42
    RULE_leer = 43
    RULE_listaExpr = 44
    RULE_coma = 45
    RULE_expr = 46
    RULE_openPar = 47
    RULE_closePar = 48
    RULE_openBra = 49
    RULE_closeBra = 50
    RULE_exponente = 51
    RULE_punto = 52
    RULE_funcionLibreriaEstandar = 53
    RULE_literal = 54

    ruleNames =  [ "programa", "declaracionesTipos", "declaracionRegistro", 
                   "declaracionTipo", "declaracionesSubprogramas", "declaracionProcedimiento", 
                   "declaracionFuncion", "parametros", "parametro", "declaracionesVariables", 
                   "declaracionVariables", "tipo", "listaIDs", "listaEnteros", 
                   "sentenciasSubprograma", "sentenciasPrograma", "sentencias", 
                   "sentencia", "escriba", "lea", "asignar", "symbolAssing", 
                   "llamar", "procedimientoLibreriaEstandar", "si", "entonces", 
                   "sino", "caso", "opcionCaso", "listaExprOpcion", "exprOpcion", 
                   "rangoExpr", "casoSino", "mientras", "haga", "para", 
                   "hasta", "repita", "retorne", "abrir", "acceso", "cerrar", 
                   "escribir", "leer", "listaExpr", "coma", "expr", "openPar", 
                   "closePar", "openBra", "closeBra", "exponente", "punto", 
                   "funcionLibreriaEstandar", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    INICIO=10
    FIN=11
    ESCRIBA=12
    LEA=13
    LLAMAR=14
    SI=15
    ENTONCES=16
    SINO=17
    CASO=18
    MIENTRAS=19
    HAGA=20
    PARA=21
    HASTA=22
    REPITA=23
    PROCEDIMIENTO=24
    VAR=25
    FUNCION=26
    RETORNE=27
    TIPO=28
    ES=29
    ARCHIVO=30
    SECUENCIAL=31
    ENTERO=32
    REAL=33
    CARACTER=34
    BOOLEANO=35
    CADENA=36
    REGISTRO=37
    ARREGLO=38
    DE=39
    ABRIR=40
    COMO=41
    ESCRITURA=42
    LECTURA=43
    CERRAR=44
    ESCRIBIR=45
    LEER=46
    PROC_NUEVA_LINEA=47
    PROC_LIMPIAR_PANTALLA=48
    PROC_POSICIONAR_CURSOR=49
    PROC_IR_A_INICIO=50
    PROC_IR_A_FIN=51
    PROC_IR_A=52
    PROC_INICIALIZAR_ALEATORIO=53
    PROC_PAUSA=54
    PROC_COLOR_TEXTO=55
    PROC_COLOR_FONDO=56
    FUNC_FDA=57
    FUNC_POSICION_ACTUAL=58
    FUNC_ALEATORIO=59
    FUNC_OBTENER_CARACTER=60
    FUNC_ENTERO_A_CADENA=61
    FUNC_REAL_A_CADENA=62
    FUNC_TECLA_PRESIONADA=63
    FUNC_VALOR_ASCII=64
    FUNC_CARACTER_ASCII=65
    FUNC_LONGITUD=66
    PODER=67
    MULT=68
    DIV=69
    MOD=70
    DIV_ENTEROS=71
    SUMA=72
    RESTA=73
    IGUAL=74
    DESIGUAL=75
    MAYOR=76
    MAYOR_IGUAL=77
    MENOR=78
    MENOR_IGUAL=79
    OP_Y=80
    OP_O=81
    NO=82
    LITERAL_REAL=83
    LITERAL_ENTERO=84
    LITERAL_CADENA=85
    LITERAL_CARACTER=86
    VERDADERO=87
    FALSO=88
    ID=89
    NL=90
    WS=91
    COMENTARIO=92
    COMENTARIO_LINEA=93

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionesTipos(self):
            return self.getTypedRuleContext(LPPParser.DeclaracionesTiposContext,0)


        def declaracionesVariables(self):
            return self.getTypedRuleContext(LPPParser.DeclaracionesVariablesContext,0)


        def declaracionesSubprogramas(self):
            return self.getTypedRuleContext(LPPParser.DeclaracionesSubprogramasContext,0)


        def sentenciasPrograma(self):
            return self.getTypedRuleContext(LPPParser.SentenciasProgramaContext,0)


        def getRuleIndex(self):
            return LPPParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LPPParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.declaracionesTipos()
            self.state = 111
            self.declaracionesVariables()
            self.state = 112
            self.declaracionesSubprogramas()
            self.state = 113
            self.sentenciasPrograma()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionesTiposContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionRegistro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPPParser.DeclaracionRegistroContext)
            else:
                return self.getTypedRuleContext(LPPParser.DeclaracionRegistroContext,i)


        def declaracionTipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPPParser.DeclaracionTipoContext)
            else:
                return self.getTypedRuleContext(LPPParser.DeclaracionTipoContext,i)


        def getRuleIndex(self):
            return LPPParser.RULE_declaracionesTipos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionesTipos" ):
                listener.enterDeclaracionesTipos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionesTipos" ):
                listener.exitDeclaracionesTipos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionesTipos" ):
                return visitor.visitDeclaracionesTipos(self)
            else:
                return visitor.visitChildren(self)




    def declaracionesTipos(self):

        localctx = LPPParser.DeclaracionesTiposContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracionesTipos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28 or _la==37:
                self.state = 117
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [37]:
                    self.state = 115
                    self.declaracionRegistro()
                    pass
                elif token in [28]:
                    self.state = 116
                    self.declaracionTipo()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionRegistroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGISTRO(self, i:int=None):
            if i is None:
                return self.getTokens(LPPParser.REGISTRO)
            else:
                return self.getToken(LPPParser.REGISTRO, i)

        def ID(self):
            return self.getToken(LPPParser.ID, 0)

        def declaracionesVariables(self):
            return self.getTypedRuleContext(LPPParser.DeclaracionesVariablesContext,0)


        def FIN(self):
            return self.getToken(LPPParser.FIN, 0)

        def getRuleIndex(self):
            return LPPParser.RULE_declaracionRegistro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionRegistro" ):
                listener.enterDeclaracionRegistro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionRegistro" ):
                listener.exitDeclaracionRegistro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionRegistro" ):
                return visitor.visitDeclaracionRegistro(self)
            else:
                return visitor.visitChildren(self)




    def declaracionRegistro(self):

        localctx = LPPParser.DeclaracionRegistroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracionRegistro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(LPPParser.REGISTRO)
            self.state = 123
            self.match(LPPParser.ID)
            self.state = 124
            self.declaracionesVariables()
            self.state = 125
            self.match(LPPParser.FIN)
            self.state = 126
            self.match(LPPParser.REGISTRO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionTipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(LPPParser.TIPO, 0)

        def ID(self):
            return self.getToken(LPPParser.ID, 0)

        def ES(self):
            return self.getToken(LPPParser.ES, 0)

        def tipo(self):
            return self.getTypedRuleContext(LPPParser.TipoContext,0)


        def getRuleIndex(self):
            return LPPParser.RULE_declaracionTipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionTipo" ):
                listener.enterDeclaracionTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionTipo" ):
                listener.exitDeclaracionTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionTipo" ):
                return visitor.visitDeclaracionTipo(self)
            else:
                return visitor.visitChildren(self)




    def declaracionTipo(self):

        localctx = LPPParser.DeclaracionTipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracionTipo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(LPPParser.TIPO)
            self.state = 129
            self.match(LPPParser.ID)
            self.state = 130
            self.match(LPPParser.ES)
            self.state = 131
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionesSubprogramasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionProcedimiento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPPParser.DeclaracionProcedimientoContext)
            else:
                return self.getTypedRuleContext(LPPParser.DeclaracionProcedimientoContext,i)


        def declaracionFuncion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LPPParser.DeclaracionFuncionContext)
            else:
                return self.getTypedRuleContext(LPPParser.DeclaracionFuncionContext,i)


        def getRuleIndex(self):
            return LPPParser.RULE_declaracionesSubprogramas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionesSubprogramas" ):
                listener.enterDeclaracionesSubprogramas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionesSubprogramas" ):
                listener.exitDeclaracionesSubprogramas(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionesSubprogramas" ):
                return visitor.visitDeclaracionesSubprogramas(self)
            else:
                return visitor.visitChildren(self)




    def declaracionesSubprogramas(self):

        localctx = LPPParser.DeclaracionesSubprogramasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracionesSubprogramas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24 or _la==26:
                self.state = 135
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [24]:
                    self.state = 133
                    self.declaracionProcedimiento()
                    pass
                elif token in [26]:
                    self.state = 134
                    self.declaracionFuncion()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionProcedimientoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDIMIENTO(self):
            return self.getToken(LPPParser.PROCEDIMIENTO, 0)

        def ID(self):
            return self.getToken(LPPParser.ID, 0)

        def declaracionesVariables(self):
            return self.getTypedRuleContext(LPPParser.DeclaracionesVariablesContext,0)


        def sentenciasSubprograma(self):
            return self.getTypedRuleContext(LPPParser.SentenciasSubprogramaContext,0)


        def parametros(self):
            return self.getTypedRuleContext(LPPParser.ParametrosContext,0)


        def getRuleIndex(self):
            return LPPParser.RULE_declaracionProcedimiento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionProcedimiento" ):
                listener.enterDeclaracionProcedimiento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionProcedimiento" ):
                listener.exitDeclaracionProcedimiento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionProcedimiento" ):
                return visitor.visitDeclaracionProcedimiento(self)
            else:
                return visitor.visitChildren(self)




    def declaracionProcedimiento(self):

        localctx = LPPParser.DeclaracionProcedimientoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracionProcedimiento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(LPPParser.PROCEDIMIENTO)
            self.state = 141
            self.match(LPPParser.ID)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 142
                self.match(LPPParser.T__0)
                self.state = 143
                self.parametros()
                self.state = 144
                self.match(LPPParser.T__1)


            self.state = 148
            self.declaracionesVariables()
            self.state = 149
            self.sentenciasSubprograma()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionFuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(LPPParser.FUNCION, 0)

        def ID(self):
            return self.getToken(LPPParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(LPPParser.TipoContext,0)


        def declaracionesVariables(self):
            return self.getTypedRuleContext(LPPParser.DeclaracionesVariablesContext,0)


        def sentenciasSubprograma(self):
            return self.getTypedRuleContext(LPPParser.SentenciasSubprogramaContext,0)


        def parametros(self):
            return self.getTypedRuleContext(LPPParser.ParametrosContext,0)


        def getRuleIndex(self):
            return LPPParser.RULE_declaracionFuncion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionFuncion" ):
                listener.enterDeclaracionFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionFuncion" ):
                listener.exitDeclaracionFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionFuncion" ):
                return visitor.visitDeclaracionFuncion(self)
            else:
                return visitor.visitChildren(self)




    def declaracionFuncion(self):
